src/github.com/ebay/akutan/query/parser/testdata/legacy/errors/unquoted_text_1.res
Query:
?s ?p SamsungGroup

Parsed:
Error: unable to parse query: line 1 column 7: expected a valid query term, but got 'SamsungGroup'
